force-app/main/default/objects/Marketing_Cloud_Journey_Event_Settings__c/fields/Invoicing_Journey_API_Key__c.field-meta.xml
<CustomField>
    <fullName>Invoicing_Journey_API_Key__c</fullName>
    <label>Invoicing Journey API Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>