force-app/main/default/objects/Marketing_Cloud_Journey_Event_Settings__c/fields/Invoicing_Journey_Confirmation_Type__c.field-meta.xml
<CustomField>
    <fullName>Invoicing_Journey_Confirmation_Type__c</fullName>
    <label>Invoicing Journey Confirmation Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>