force-app/main/default/objects/Marketing_Cloud_Journey_Event_Settings__c/fields/Invoicing_Journey_InvoiceDropped_Type__c.field-meta.xml
<CustomField>
    <fullName>Invoicing_Journey_InvoiceDropped_Type__c</fullName>
    <description>Event Type for the InvoiceDrop event.</description>
    <inlineHelpText>Event Type for the InvoiceDrop event.</inlineHelpText>
    <label>Invoicing Journey InvoiceDropped Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>