force-app/main/default/objects/Marketing_Cloud_Journey_Event_Settings__c/fields/PE_Manual_Refund_Mailbox__c.field-meta.xml
<CustomField>
    <fullName>PE_Manual_Refund_Mailbox__c</fullName>
    <description>Mailbox to send Manual Refund requests to.</description>
    <inlineHelpText>Mailbox to send Manual Refund requests to.</inlineHelpText>
    <label>PE Manual Refund Mailbox</label>
    <type>Email</type>
</CustomField>