force-app/main/default/objects/Marketing_Cloud_Journey_Event_Settings__c/fields/PE_Notification_Event__c.field-meta.xml
<CustomField>
    <fullName>PE_Notification_Event__c</fullName>
    <description>Event text to appear in the PE Journey Email Sends.</description>
    <inlineHelpText>Event text to appear in the PE Journey Email Sends.</inlineHelpText>
    <label>PE_Notification_Event</label>
    <length>255</length>
    <type>Text</type>
</CustomField>